--- a/.env-prod
+++ b/.env-prod
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_NAME=CRM
+APP_ENV=production
+APP_KEY=base64:3IkPxWMigNLwzFcH+uUcVT02xc78c5QiUMqDBQFoBfg=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
