--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=mysql.seabra.net.br
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=seabra05
-DB_USERNAME=seabra05
-DB_PASSWORD=Net102030
+DB_DATABASE=appstartup
+DB_USERNAME=root
+DB_PASSWORD=mestre
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -25,6 +25,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME=null
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
