--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel-admin-ext/media-manager": "^1.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "spatie/laravel-backup": "^5.11",
         "webklex/laravel-git-hook": "1.0.1.7"
     },
     "require-dev": {
