--- a/.env
+++ b/.env
@@ -12,6 +12,13 @@ DB_DATABASE=appstartup
 DB_USERNAME=root
 DB_PASSWORD=mestre
 
+DB_CONNECTION_CHAT=mysql
+DB_HOST_CHAT=127.0.0.1
+DB_PORT_CHAT=3306
+DB_DATABASE_CHAT=chat
+DB_USERNAME_CHAT=root
+DB_PASSWORD_CHAT=mestre
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -22,14 +29,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME=null
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=preview
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=cezzaar@gmail.com
+MAIL_PASSWORD=Cesar1507
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
